# libmaudio

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  CMakeLists.txt.legit  README.md  README.txt  TODO.txt  USEFUL.txt  doxygen.config  meson.build
doc/: doxygen.config
doc/doc/html/: ActionNode_8hpp.html  ActionNode_8hpp_source.html  AudioBuffer_8hpp.html  AudioBuffer_8hpp_source.html  AudioDevice_8cpp.html  AudioDevice_8hpp.html  AudioDevice_8hpp_source.html  AudioException_8hpp.html  AudioException_8hpp_source.html  AudioFile_8hpp_source.html  AudioInfo_8hpp.html  AudioInfo_8hpp_source.html  AudioQueue_8hpp.html  AudioQueue_8hpp_source.html  BaseAction_8hpp.html  BaseAction_8hpp_source.html  BaseAudioSink_8cpp.html  BaseAudioSource_8cpp.html  BaseManipulator_8cpp.html  BulkReader_8cpp.html  ConfigManager_8hpp.html  ConfigManager_8hpp_source.html  Config_8hpp.html  Config_8hpp_source.html  FileInfo_8hpp.html  FileInfo_8hpp_source.html  FileWriter_8cpp.html  IAction_8hpp.html  IAction_8hpp_source.html  IAudioBuffer_8hpp.html  IAudioBuffer_8hpp_source.html  IAudioInfo_8hpp.html  IAudioInfo_8hpp_source.html  IControl_8hpp.html  IControl_8hpp_source.html  IKeyValueStore_8hpp.html  IKeyValueStore_8hpp_source.html  IKeyableProperty_8hpp.html  IKeyableProperty_8hpp_source.html  IPropertyManager_8hpp.html  (+280 more)
doc/doc/latex/: ActionNode_8hpp.tex  AudioBuffer_8hpp.tex  AudioDevice_8cpp.tex  AudioDevice_8hpp.tex  AudioException_8hpp.tex  AudioInfo_8hpp.tex  AudioQueue_8hpp.tex  BaseAction_8hpp.tex  BaseAudioSink_8cpp.tex  BaseAudioSource_8cpp.tex  BaseManipulator_8cpp.tex  BulkReader_8cpp.tex  ConfigManager_8hpp.tex  Config_8hpp.tex  FileInfo_8hpp.tex  FileWriter_8cpp.tex  IAction_8hpp.tex  IAudioBuffer_8hpp.tex  IAudioInfo_8hpp.tex  IControl_8hpp.tex  IKeyValueStore_8hpp.tex  IKeyableProperty_8hpp.tex  IPropertyManager_8hpp.tex  IProperty_8hpp.tex  ISample_8hpp.tex  ISocket_8hpp.tex  KeyValueStore_8hpp.tex  Mixer_8cpp.tex  Node_8hpp.tex  Performance_8cpp.tex  Player_8cpp.tex  PluginManager_8cpp.tex  PropertyManager_8hpp.tex  Resampler_8cpp.tex  Sample_8hpp.tex  Scene_8hpp.tex  SerializerStore_8hpp.tex  Serializer_8hpp.tex  SimpleKeyableProperty_8hpp.tex  SimpleProperty_8hpp.tex  (+186 more)
examples/: test1.cpp
ide/: maudio.cbp
ide/codeblocks/: maudio.cbp  maudio.conf  maudio_test  testconfig.txt
ide/codeblocks_DONT_USE_THIS_ANYMORE/: maudio.cbp
ide/tests/: MaudioTests.cbp  MaudioTests.depend  MaudioTests.layout
include/: MaudioInfo.hpp  maudio.hpp
include/core/action/: BaseAction.hpp  ErrorAction.hpp  IAction.hpp  SinusGenerator.hpp  TerminalPrinter.hpp
include/core/actions/: BaseAction.hpp  SinusGenerator.hpp  TerminalPrinter.hpp
include/core/audiodata/: AudioBuffer.hpp  AudioInfo.hpp  AudioQueue.hpp  FileInfo.hpp  IAudioBuffer.hpp  IAudioInfo.hpp  ISample.hpp  RawAudioBuffer.hpp  RawSample.hpp  Sample.hpp
include/core/audiosink/: BaseAudioSink.hpp  IAudioSink.hpp  Performance.hpp  Player.hpp  TerminalPrinter.hpp
include/core/audiosource/: BaseAudioSource.hpp  IAudioGenerator.hpp  IAudioSource.hpp  SinusGenerator.hpp
include/core/manipulator/: BaseManipulator.hpp  IManipulator.hpp  Mixer.hpp  Resampler.hpp
include/core/node/: ActionNode.hpp  BaseNode.hpp  Edge.hpp  IAction.hpp  IAudioGetter.hpp  IControl.hpp  INode.hpp  ISocket.hpp  Node.hpp  PluginNode.hpp  Scene.hpp
include/core/pluginmanager/: PluginLoader.hpp  PluginManager.hpp
include/core/property/: BaseProperty.hpp  IKeyableProperty.hpp  IProperty.hpp  IPropertyManager.hpp  KeyableProperty.hpp  Property.hpp  PropertyManager.hpp  SimpleKeyableProperty.hpp  SimpleProperty.hpp
include/core/scene/: Project.hpp  Scene.hpp  TypeManager.hpp
include/core/serializer/: ISerializer.hpp  SerializerInfo.hpp  SerializerStore.hpp  TXTSerializer.hpp
include/core/store/: ConfigManager.hpp  ConfigReader.hpp  IKeyValueStore.hpp  IMultiLevelStore.hpp  IMultiStore.hpp  KeyValueStore.hpp  MultiLevelStore.hpp  MultiStore.hpp  StoreReader.hpp  StoreWriter.hpp
include/core/util/: AudioBuffer.hpp  AudioException.hpp  AudioInfo.hpp  BaseObservable.hpp  BaseObserver.hpp  Config.hpp  ConfigManager.hpp  FileInfo.hpp  IAudioBuffer.hpp  IDeletionObserver.hpp  IDeletionSubject.hpp  IObservable.hpp  IObserver.hpp  ISample.hpp  RecursiveSharedMutex.hpp  Sample.hpp  SharedLockGuard.hpp  TypeIdConverter.hpp  UniqueID.hpp  Util.hpp  action_ptr.hpp  plugin_ptr.hpp  simple_ptr.hpp  sptr.hpp
include/extended/audiosink/: FileWriter.hpp  Player.hpp
include/maudio/: MaudioPaths.hpp
include/maudio/action/: BaseAction.hpp  ErrorAction.hpp  IAction.hpp  IControl.hpp
include/maudio/audiodata/: AudioBuffer.hpp  AudioInfo.hpp  AudioQueue.hpp  IAudioBuffer.hpp  IAudioInfo.hpp  Sample.hpp
include/maudio/extended/: SinusGenerator.hpp  TerminalPrinter.hpp
include/maudio/pluginmanager/: PluginLoader.hpp  PluginManager.hpp
include/maudio/property/: IKeyableProperty.hpp  IProperty.hpp  IPropertyManager.hpp  PropertyManager.hpp  SimpleKeyableProperty.hpp  SimpleProperty.hpp
include/maudio/scene/: Project.hpp  Scene.hpp  TypeManager.hpp
include/maudio/serializer/: ISerializable.hpp  ISerializer.hpp  SerializerInfo.hpp  TXTSerializer.hpp
include/maudio/store/: ConfigManager.hpp  IMultiLevelStore.hpp  KeyValueStore.hpp  MultiLevelStore.hpp  MultiStore.hpp  StoreReader.hpp  StoreWriter.hpp
include/maudio/util/: BaseObservable.hpp  BaseObserver.hpp  IObservable.hpp  IObserver.hpp  String.hpp  Util.hpp  sptr.hpp
pluginsrc/: compile.txt
pluginsrc/FileWriter/: FileWriter.cpp
pluginsrc/mixer/: Mixer.cpp  compile.sh
pluginsrc/player/: AudioDevice.cpp  AudioDevice.hpp  Player.cpp  Player.hpp  compile.sh
pluginsrc/testplugin/: makefile  plugin.cpp
res/: info.txt
res/config/: maudio.conf  plugins.conf
res/plugins/: plugins.conf
src/: Boilerplate.txt  HeaderTemplate.txt  MaudioInfo.cpp  SourceTemplate.txt
src/core/action/: BaseAction.cpp  (+3 more)
src/examples/: test1.cpp
src/maudio/: MaudioInfo.cpp  MaudioPaths.cpp
src/plugins/: compile.txt  info.txt
src/test/: MaudioTest.cpp
test/: MaudioTest.hpp
test/example/: compile
(+250 files in other folders)
